--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:layout_weight="8"
+            android:layout_weight="10"
             android:fontFamily="serif"
             android:gravity="center"
             android:text=""
@@ -60,6 +60,7 @@
             android:layout_weight="4"
             android:fontFamily="serif"
             android:gravity="center"
+            android:onClick="save"
             android:text="Save"
             android:textColor="#070F2B"
             android:textSize="25sp"
@@ -76,6 +77,7 @@
             android:layout_weight="4"
             android:fontFamily="serif"
             android:gravity="center"
+            android:onClick="reset"
             android:text="Reset"
             android:textColor="#070F2B"
             android:textSize="25sp"
@@ -93,6 +95,7 @@
             android:layout_weight="4"
             android:fontFamily="serif"
             android:gravity="center"
+            android:onClick="exit"
             android:text="Exit"
             android:textColor="#070F2B"
             android:textSize="25sp"
