--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:layout_weight="3" />
 
         <EditText
+            android:id="@+id/eT"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="4"
@@ -39,6 +40,7 @@
             android:layout_weight="2" />
 
         <TextView
+            android:id="@+id/tV"
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="10"
